--- a/public/book/index.html
+++ b/public/book/index.html
@@ -12,7 +12,8 @@
         Math Book
     </h2>
     <div id="concept-container" class="concept-container">
-        <div class="accordian-tab">
+        <!-- structure, auto enerated by js -->
+        <!-- <div class="accordian-tab">
             <input type="checkbox" id="toggle1" class="accordian-toggle" name="toggle">
             <label for="toggle1">toggle1</label>
             <div class="accordian-content">
@@ -22,7 +23,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <script src="/assets/js/index.js"> </script>
